Update configuration and policies
- Add dummy images URL to .env.example
- Update .gitignore with more comprehensive file exclusions
- Modify AuthServiceProvider to comment out unused policies and add new Category and Page policies
- Clean up log file entries

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,8 @@ DB_DATABASE=cuba_laravel
 DB_USERNAME=root
 DB_PASSWORD=password
 
+DUMMY_IMAGES_URL=https://larathemes.pixelstrap.com/cuba/public/assets/images/media.zip
+
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
